♻️ UPDATE: Aktualisierung der Terminologie im Adminpanel
- Ersetzen von "Verwaltungspanel" durch "Adminpanel" in mehreren Texten
- Aktualisierung der Beschreibungen für Einstellungen im Adminpanel
- Konsistente Verwendung von "Adminpanel" statt "Verwaltungspanel"

--- a/upload/language/German/adminpanel.lng
+++ b/upload/language/German/adminpanel.lng
@@ -138,7 +138,7 @@ $lang = array (
 'opt_sys_imerr' => "Dateien im lokalen Speicher speichern, falls der externe nicht verfügbar ist",
 'opt_sys_imerrd' => "Bei Aktivierung dieser Einstellung werden hochgeladene Dateien und Bilder im lokalen Speicher gespeichert, falls der externe Speicher aus irgendeinem Grund nicht verfügbar ist, zum Beispiel vorübergehend keine Verbindung. Bei Deaktivierung dieser Einstellung werden Dateien nicht hochgeladen, falls der angegebene Speicher nicht verfügbar ist, und der Benutzer erhält eine entsprechende Benachrichtigung über den Upload-Fehler.",
 'opt_sys_immr' => "Speicherort für Bilder zu Veröffentlichungen",
-'opt_sys_immrd' => "Geben Sie an, in welchem Speicher Bilder zu Veröffentlichungen beim Hochladen auf den Server gespeichert werden. Externe Speicher können Sie im Verwaltungspanel im Abschnitt Speicherverwaltung erstellen",
+'opt_sys_immrd' => "Geben Sie an, in welchem Speicher Bilder zu Veröffentlichungen beim Hochladen auf den Server gespeichert werden. Externe Speicher können Sie im Adminpanel im Abschnitt Speicherverwaltung erstellen"
 'opt_sys_imcr' => "Speicherort für Bilder zu Kommentaren",
 'opt_sys_imcrd' => "Geben Sie an, in welchem Speicher Bilder zu Kommentaren beim Hochladen auf den Server gespeichert werden.",
 'opt_sys_imsr' => "Speicherort für Bilder für statische Seiten",
@@ -167,7 +167,7 @@ $lang = array (
 'images_icons' => "Icons zu Kategorien",
 'btn_folder' => "Neuen Ordner erstellen",
 'folder_enter' => "Geben Sie den Ordnernamen ein:",
-'change_language' => "Sprachauswahl für das Verwaltungspanel",
+'change_language' => "Sprachauswahl für das Adminpanel"
 'comm_reply_1' => "Pop-up-Fenster",
 'comm_reply_2' => "Unter dem Kommentar",
 'opt_sys_redusr' => "Benutzername für den Redis-Server",
@@ -190,12 +190,12 @@ $lang = array (
 'opt_sys_tlsd' => "Sie können ein Trennzeichensymbol angeben, das in der Liste der Tags verwendet wird, die der Nachricht zugewiesen sind, bei deren Anzeige auf der Webseite, um Tags in der Liste zu trennen. Zum Beispiel bei Angabe des Symbols /, bei der Anzeige der Kategorieliste auf der Webseite, die der Nachricht zugewiesen sind, wird etwa folgende Ausgabe verwendet: Tag 1 / Tag 2. Die Verwendung von HTML-Tags ist erlaubt",
 'disable_index' => "Indexierung durch Suchmaschinen verboten",
 'disable_search' => "Für die Webseite-Suche verboten",
-'unlock' => "Entsperren Sie den Zugriff auf das Verwaltungspanel",
+'unlock' => "Entsperren Sie den Zugriff auf das Adminpanel"
 'timeout_title' => "Benachrichtigung über Inaktivität auf der Webseite",
 'timeout_text' => "Ihre Sitzung wird automatisch in 10 Sekunden aufgrund von Inaktivität auf der Webseite blockiert",
 'timeout_keep' => "Arbeit fortsetzen",
-'opt_sys_tsess' => "Timeout für Inaktivität im Verwaltungspanel (in Minuten)",
-'opt_sys_tsessd' => "Falls ein Benutzer die angegebene Anzahl von Minuten nichts im Verwaltungspanel macht, wird sein Konto automatisch vorübergehend blockiert, bis das Passwort eingegeben wird. Sie können 0 setzen, um Einschränkungen aufzuheben, und die Inaktivitätszeit wird nicht verfolgt",
+'opt_sys_tsess' => "Timeout für Inaktivität im Adminpanel (in Minuten)"
+'opt_sys_tsessd' => "Falls ein Benutzer die angegebene Anzahl von Minuten nichts im Adminpanel macht, wird sein Konto automatisch vorübergehend blockiert, bis das Passwort eingegeben wird. Sie können 0 setzen, um Einschränkungen aufzuheben, und die Inaktivitätszeit wird nicht verfolgt"
 'password_incorect' => "Falsches Passwort",
 'del_from_social_2' => "Verbindung zum sozialen Netzwerk erfolgreich gelöscht.",
 'addnews_xf_alert_1' => "Das Feld <b>{field}</b> ist ein Pflichtfeld",
@@ -268,7 +268,7 @@ $lang = array (
 'opt_sys_minsided' => "Es gibt zwei Möglichkeiten, diese Einstellung zu verwenden:<br /><br /><b>Erste:</b> Sie geben die Abmessungen in Pixeln für eine der Seiten des Originalbildes ein. Zum Beispiel: <b>800</b>.<br /><br /><b>Zweite:</b> Sie geben Breite und Höhe des Originalbildes im Format Breite x Höhe an. Zum Beispiel: <b>800x600</b><br /><br />Falls die Größe kleiner ist, wird das Bild nicht auf den Server hochgeladen. Dem Benutzer wird eine Information angezeigt, dass das Bild zu klein ist. Sie können 0 angeben, falls Sie diese Einschränkung nicht festlegen möchten und alle Bilder hochgeladen werden.",
 'upload_error_7' => "Das hochzuladende Bild kann nicht kleiner als {minsize} Pixel sein.",
 'xfield_xi22' => "Sie können minimale Abmessungen für Breite und Höhe für das Bild angeben, das auf den Server hochgeladen wird. Sie können nur die Größe einer Seite angeben, zum Beispiel: 800, oder Sie können die Abmessungen beider Seiten gleichzeitig angeben, zum Beispiel: 800x600. Falls Sie keine Einschränkungen festlegen möchten, lassen Sie das Feld leer.",
-'plugins_pinfo_1' => "Sie können PHP-Code angeben, der bei der Durchführung bestimmter Aktionen mit dem Plugin im Verwaltungspanel ausgeführt wird:",
+'plugins_pinfo_1' => "Sie können PHP-Code angeben, der bei der Durchführung bestimmter Aktionen mit dem Plugin im Adminpanel ausgeführt wird:"
 'plugins_aсt_l12' => "Ersetzen ab Vorkommen:",
 'plugins_rep_hint' => "Geben Sie an, ab welchem Vorkommen die Ersetzung erfolgen soll, falls der Code mehrmals in der Datei vorkommt. Zum Beispiel kommt eine bestimmte Zeile mehrmals in der Datei vor, und Sie möchten ab der zweiten ersetzen, dann können Sie in diesem Fall 2 angeben. Falls alle Vorkommen ersetzt werden sollen, lassen Sie dieses Feld leer.",
 'plugins_needp' => "Pflichtmäßige Anwesenheit des Plugins:",
@@ -326,7 +326,7 @@ $lang = array (
 'upgr_utf8' => "<b>Achtung:</b><br>Die Kodierung Ihrer Datenbank ist gewöhnliches utf-8. Für die vollständige Unterstützung aller Zeichen dieser Kodierung ist es erforderlich, die vier-Byte-Kodierung utf8mb4 zu verwenden. Mit der Kodierung utf8mb4 können Sie zum Beispiel Emoji-Smileys und viele andere Zeichen für Ihre Webseite hinzufügen. Sie können Ihre Datenbank konvertieren, indem Sie dem Link folgen: <a href=\"?mod=upgrade&action=dbconvert&subaction=onlymb4\" >Datenbankkonvertierung</a>",
 'upgr_demo' => "<b>Achtung:</b><br>Auf Ihrem Server befinden sich Dateien der Demo-Version mit geschlossenem Quellcode. Sie haben jedoch eine Lizenz erworben und aktiviert, entsprechend können Sie die Dateien auf dem Server auf Dateien der kostenpflichtigen Distribution mit offenem Quellcode aktualisieren, um zum Beispiel das Plugin-System auf der Webseite zu nutzen. Sie können Ihre Dateien aktualisieren, indem Sie dem Link folgen: <a href=\"?mod=upgrade\" >Aktualisierung der DataLife Engine-Dateien</a>",
 'upgr_demo_1' => "Sie verwenden die Demo-Version des DataLife Engine-Skripts. In der Demo-Version ist der Quellcode des Skripts geschlossen, daher ist leider das Plugin-System für Sie nicht verfügbar, da es für die Arbeit offenen Quellcode erfordert. Sie müssen eine Lizenz erwerben und die Skriptdateien auf Dateien der kostenpflichtigen Distribution mit offenem Quellcode aktualisieren.",
-'upgr_notadm' => "Für die Fortsetzung der Arbeit des Skripts ist dessen Aktualisierung erforderlich. Melden Sie sich im Verwaltungspanel des Skripts als Webseitenadministrator an",
+'upgr_notadm' => "Für die Fortsetzung der Arbeit des Skripts ist dessen Aktualisierung erforderlich. Melden Sie sich im Adminpanel des Skripts als Webseitenadministrator an"
 'upgr_dbtitle_2' => "DataLife Engine-Aktualisierungsassistent",
 'upgr_dbtitle_3' => "Skriptaktualisierung auf die aktuelle Version",
 'upgr_info' => "Jetzt wird Ihre Datenbank auf die aktuelle Version des Skripts aktualisiert. Ihre Datenbank wird schrittweise von Version <b>{oldversion}</b> auf <b>{newversion}</b> aktualisiert.",
@@ -436,7 +436,7 @@ $lang = array (
 'plugins_errors_3' => "Keine Fehler gefunden",
 'plugins_errors_4' => "Code konnte nicht gefunden werden:",
 'plugins_errors_5' => "Allgemeines Problem",
-'stat_secfault_5' => "<b>Sicherheitsempfehlung:</b><br><br>Nachdem Sie mit dem Hinzufügen und Bearbeiten von Plugins fertig sind, empfehlen wir aus Sicherheitsgründen, das Plugin-System nur in den Lesemodus zu versetzen. Öffnen Sie dazu die Datei <b>engine/classes/plugins.class.php</b>, suchen Sie darin <b>define('PLUGINS_READ_ONLY', false);</b> und ersetzen Sie es durch <b>define('PLUGINS_READ_ONLY', true);</b><br><br>Dies versetzt Ihre Plugins nur in den Arbeits- und Lesemodus. Sie werden weiterhin funktionieren, können aber nicht geändert und es können keine neuen Plugins hinzugefügt werden. Dadurch schützen Sie Ihre Webseite vor Modifikationen, auch falls unbefugte Personen die Kontrolle über das Verwaltungspanel des Skripts erlangen.",
+'stat_secfault_5' => "<b>Sicherheitsempfehlung:</b><br><br>Nachdem Sie mit dem Hinzufügen und Bearbeiten von Plugins fertig sind, empfehlen wir aus Sicherheitsgründen, das Plugin-System nur in den Lesemodus zu versetzen. Öffnen Sie dazu die Datei <b>engine/classes/plugins.class.php</b>, suchen Sie darin <b>define('PLUGINS_READ_ONLY', false);</b> und ersetzen Sie es durch <b>define('PLUGINS_READ_ONLY', true);</b><br><br>Dies versetzt Ihre Plugins nur in den Arbeits- und Lesemodus. Sie werden weiterhin funktionieren, können aber nicht geändert und es können keine neuen Plugins hinzugefügt werden. Dadurch schützen Sie Ihre Webseite vor Modifikationen, auch falls unbefugte Personen die Kontrolle über das Adminpanel des Skripts erlangen."
 'plugins_errors_6' => "Das Plugin-System arbeitet im Lesemodus. Der Webseitenadministrator hat alle Aktionen mit Plugins verboten. Um Aktionen mit Plugins zu entsperren, müssen Sie die Datei <b>engine/classes/plugins.class.php</b> öffnen, darin <b>define('PLUGINS_READ_ONLY', true);</b> finden und durch <b>define('PLUGINS_READ_ONLY', false);</b> ersetzen",
 'plugins_errors_7' => "Die Datei <b>{file}</b> befindet sich in der Liste der geschützten Dateien. Sie kann nicht über das Plugin-System modifiziert werden.",
 'plugins_errors_8' => "Für das Hochladen von Plugins können nur XML- und ZIP-Dateien verwendet werden.",
@@ -634,7 +634,7 @@ $lang = array (
 'lost_pass_4' => "Sie verwenden einen unzulässigen Namen",
 'lost_pass_5' => "Die Überprüfung, dass Sie kein Roboter sind, wurde nicht bestanden",
 'lost_pass_6' => "Benutzer mit diesem Namen oder E-Mail wurde in der Datenbank nicht gefunden",
-'lost_pass_7' => "Sie können den Zugang im Verwaltungspanel nicht wiederherstellen, da Ihr Konto keinen Zugang zum Verwaltungspanel hat",
+'lost_pass_7' => "Sie können den Zugang im Adminpanel nicht wiederherstellen, da Ihr Konto keinen Zugang zum Adminpanel hat"
 'lost_pass_8' => "Für die Wiederherstellung des Passworts auf der Webseite folgen Sie dem Link:",
 'lost_pass_9' => "Für die Aufhebung der IP-Blockierung auf der Webseite folgen Sie dem Link:",
 'lost_pass_10' => "Sehr geehrter Besucher! Da alle Passwörter aus Sicherheitsgründen in verschlüsselter Form gespeichert werden, wurde an die E-Mail-Adresse, die Sie bei der Registrierung angegeben haben, eine Benachrichtigung zur Generierung eines neuen Passworts gesendet.",
@@ -821,7 +821,7 @@ die Webseite-Administration",
 'opt_sys_cls' => "Symbol - Trenner für die Liste der Kategorien, die dem Artikel zugewiesen sind",
 'opt_sys_clsd' => "Sie können ein Trennzeichen angeben, das in der Liste der Kategorien verwendet wird, die dem Artikel zugewiesen sind, bei ihrer Anzeige auf der Webseite, um Kategorien in der Liste zu trennen. Zum Beispiel wird bei der Angabe des Symbols &raquo; bei der Anzeige der Kategorieliste auf der Webseite, die dem Artikel zugewiesen sind, etwa folgende Ausgabe verwendet: Kategorie &raquo; Unterkategorie",
 'opt_sys_mdl' => "Anzahl der Tage, in denen Aktionsprotokolle im Adminpanel gespeichert werden",
-'opt_sys_mdld' => "Geben Sie die Anzahl der Tage an, in denen Aktionsprotokolle der Benutzer im Verwaltungspanel des Skripts gespeichert werden. Die Mindestanzahl der Tage beträgt 30 Tage. Sie können eine größere Anzahl von Tagen einstellen, aber nicht weniger.",
+'opt_sys_mdld' => "Geben Sie die Anzahl der Tage an, in denen Aktionsprotokolle der Benutzer im Adminpanel des Skripts gespeichert werden. Die Mindestanzahl der Tage beträgt 30 Tage. Sie können eine größere Anzahl von Tagen einstellen, aber nicht weniger."
 'opt_sys_mi' => "Größe der mittleren Kopie des hochgeladenen Bildes",
 'opt_sys_mid' => "Es gibt zwei Möglichkeiten, diese Einstellung zu verwenden:<br /><br /><b>Erste:</b> Sie geben die maximale Größe in Pixeln für eine der Seiten des hochzuladenden Bildes an, bei deren Überschreitung eine mittlere Kopie des Bildes erstellt wird. Zum Beispiel: <b>400</b><br /><br /><b>Zweite:</b> Sie geben die Breite und Höhe der mittleren Kopie des Bildes im Format Breite x Höhe an. Zum Beispiel: <b>100x100</b>.<br /><br />Sie können 0 angeben, wenn Sie keine mittlere Kopie der hochzuladenden Bilder auf dem Server erstellen möchten.",
 'images_amh' => "Mittlere Kopie mit der Größe erstellen:",
@@ -907,7 +907,7 @@ die Webseite-Administration",
 'add_news' => "Artikel hinzufügen",
 'edit_news' => "Artikel bearbeiten",
 'header_m_title' => "Startseite",
-'header_m_subtitle' => "Startseite des Verwaltungspanels",
+'header_m_subtitle' => "Startseite des Adminpanels"
 'header_n_title' => "Hinzufügung von Veröffentlichungen",
 'header_ed_title' => "Bearbeitung von Veröffentlichungen",
 'header_box_title' => "Systemnachricht",
@@ -1904,8 +1904,8 @@ die Webseite-Administration",
 'opt_sys_imwd' => "Geben Sie die maximale Breite für Bilder an, die auf externen Servern gehostet werden und mit den Tags [img] [/img] eingefügt werden. Falls das Bild größer als diese Breite ist, wird es proportional auf die angegebene Größe verkleinert. Zum Deaktivieren der automatischen Verkleinerung geben Sie 0 ein.",
 'group_main' => "Veröffentlichung auf der Hauptseite erlauben",
 'group_main_hint' => "Sie können dieser Gruppe erlauben oder verbieten, Nachrichten auf der Hauptseite der Webseite zu veröffentlichen",
-'clean_title' => "Datenbankoptimierungs-Assistent",
-'clean_all' => "Willkommen beim Datenbankoptimierungs-Assistenten von DataLife Engine. Wir bieten Ihnen an, Ihre Datenbank Schritt für Schritt von veralteten Informationen zu bereinigen, eine Optimierung und Synchronisierung Ihrer Datenbank durchzuführen. Beachten Sie, dass Sie, falls Sie eine bestimmte Aktion nicht ausführen möchten, einfach \"Schritt überspringen\" wählen können. Die Gesamtgröße Ihrer Datenbank beträgt derzeit vor der Optimierung: {datenbank}.",
+'clean_title' => "Datenbankoptimierungsassistent"
+'clean_all' => "Willkommen beim Datenbankoptimierungsassistenten von DataLife Engine. Wir bieten Ihnen an, Ihre Datenbank Schritt für Schritt von veralteten Informationen zu bereinigen, eine Optimierung und Synchronisierung Ihrer Datenbank durchzuführen. Beachten Sie, dass Sie, falls Sie eine bestimmte Aktion nicht ausführen möchten, einfach \"Schritt überspringen\" wählen können. Die Gesamtgröße Ihrer Datenbank beträgt derzeit vor der Optimierung: {datenbank}."
 'clean_skip' => "Schritt überspringen",
 'clean_news' => "<h4><b>1. Löschung veralteter Nachrichten</b></h4>Sie können Nachrichten löschen, die bereits nicht mehr aktuell sind und für Sie nicht mehr benötigt werden. Geben Sie ein Datum ein, um alle Nachrichten zu löschen, die vor dem ausgewählten Datum zur Datenbank hinzugefügt wurden. Dies ist eine ziemlich ressourcenintensive Operation, daher kann es ziemlich lange dauern.",
 'clean_comments' => "<h4><b>2. Löschung veralteter Kommentare</b></h4>Geben Sie ein Datum ein, um alle Kommentare Ihrer Besucher zu löschen, die vor dem ausgewählten Datum zur Datenbank hinzugefügt wurden. Dies ist eine ziemlich ressourcenintensive Operation, daher kann es ziemlich lange dauern.",
@@ -2012,7 +2012,7 @@ die Webseite-Administration",
 'licence_info' => "Skript-Lizenztyp:",
 'licence_trial' => "Nicht aktivierte Kopie",
 'licence_full' => "Lizenz aktiviert",
-'trial_info' => "<h4>Willkommen im DataLife Engine Verwaltungspanel</h4>Sie verwenden die Demo-Version von DataLife Engine. Die Funktionalität der Demo-Version ist durch die Anzahl der Veröffentlichungen und Kommentare begrenzt. Um alle Einschränkungen aufzuheben, müssen Sie eine Lizenz erwerben und Ihren Lizenzschlüssel eingeben.",
+'trial_info' => "<h4>Willkommen im DataLife Engine Adminpanel</h4>Sie verwenden die Demo-Version von DataLife Engine. Die Funktionalität der Demo-Version ist durch die Anzahl der Veröffentlichungen und Kommentare begrenzt. Um alle Einschränkungen aufzuheben, müssen Sie eine Lizenz erwerben und Ihren Lizenzschlüssel eingeben."
 'trial_info_1' => "Das Skript muss nur auf der Domain aktiviert werden, wo Sie Ihre Lizenz dauerhaft verwenden werden, daher aktivieren Sie Ihre Kopie des Skripts nicht, falls Sie das Skript auf einer Test-Webseite verwenden.",
 'trial_info_2' => "Lizenz erwerben",
 'trial_info_3' => "https://dle-news.ru/price.html",
@@ -2298,7 +2298,7 @@ die Webseite-Administration",
 'vote_clear3' => "Die Abstimmungsergebnisse wurden erfolgreich gelöscht",
 'vote_alert' => "Alle Felder sind obligatorisch auszufüllen",
 'last_comm' => "letzte Kommentare",
-'skin_title' => "Verwaltungspanel",
+'skin_title' => "Adminpanel"
 'skin_main' => "Hauptseite",
 'skin_view' => "Webseite anzeigen",
 'skin_help' => "Hilfe",
