--- a/upload/language/German/install.lng
+++ b/upload/language/German/install.lng
@@ -50,7 +50,7 @@ $lang = array_merge($lang, array (
 'install_39'	=>	"Daten für den Zugriff, mit denen Sie sich im DataLife Engine Admin-Panel anmelden werden",
 'install_40'	=>	"Administrator-Name:",
 'install_41'	=>	"Passwort wiederholen:",
-'install_42'	=>	"Füllen Sie alle für die Anmeldung im Verwaltungspanel erforderlichen Felder aus",
+'install_42'	=>	"Füllen Sie alle für die Anmeldung im Adminpanel erforderlichen Felder aus"
 'install_43'	=>	"Beide eingegebenen Passwörter müssen übereinstimmen",
 'install_44'	=>	"Der eingegebene Administrator-Name enthält unzulässige Zeichen für die Registrierung",
 'install_45'	=>	"Installation von DataLife Engine auf dem Server",
